--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <p>The Classic Word Guessing Game</p>
     </header>
     <div id ='gameBlock' onload="main.js">
-        <div id = 'graphicBlock'></div>
+        <div id = 'graphicBlock'>
+            <img src="images/black/3.png" id="image">
+        </div>
     </div>
+    <div id="defBlock"></div>
     <script src="main.js" type="text/javascript"></script>
-</body>
+</body> 
