--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8"/>
     <link rel="stylesheet" href="index.css"></link>
     <title>Hangman by Kaleba Keitshokile</title>
+    <meta name="author" content="Kaleba Keitshokile">
+    <meta name="description" content="A simple browser hangman game written in javascript">
+    <meta name="keywords" content="Kaleba,Keitshokile,hangman,project">
 </head>
 <body>
     <header>
@@ -15,4 +19,6 @@
     </div>
     <div id="defBlock"></div>
     <script src="main.js" type="text/javascript"></script>
+    <footer>Created by Kaleba Keitshokile.<br>Feel free to use the graphics in your own projects (not to sell).
+    </footer>
 </body> 
