CSS colours and fonts

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="author" content="Kaleba Keitshokile">
     <meta name="description" content="A simple browser hangman game written in javascript">
     <meta name="keywords" content="Kaleba,Keitshokile,hangman,project">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Hangman</h1>
-        <p>The Classic Word Guessing Game</p>
+        <p>A Classic Word Guessing Game</p>
     </header>
     <div id ='gameBlock' onload="main.js">
         <div id = 'graphicBlock'>
@@ -19,6 +22,6 @@
     </div>
     <div id="defBlock"></div>
     <script src="main.js" type="text/javascript"></script>
-    <footer>Created by Kaleba Keitshokile.<br>Feel free to use the graphics in your own projects (not to sell).
+    <footer>Created by Kaleba Keitshokile
     </footer>
 </body> 
